直接内存溢出。